Fix on broken styles props and bug cleanup and id
fixed broken style props
style fixes

--- a/styles/FinalRound.module.scss
+++ b/styles/FinalRound.module.scss
@@ -70,10 +70,12 @@
         height: 485px;
     }
     .gridItem {
+
         height: 80px;
         font-size: 2rem;
     }
     .gridTitle {
+        background: transparent;
         font-size: 1.25rem;
         height: 80px;
     }
@@ -111,7 +113,6 @@
     .gridTitle {
         font-size: .75rem;
         height: 55px;
-        border-bottom: 1px solid black;
     }
 }
 
